--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            keyAlias 'bindo'
+            keyPassword '123456'
+            storeFile file('/Users/huhai/work/lic/androidPay.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.google.android.gms.samples.wallet"
@@ -22,11 +30,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.gms:play-services:11.4.2'
-
+    compile 'com.google.android.gms:play-services-wallet:11.4.2'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     // "wallet" is the only module needed for the Google Payment API and this sample app.
     // Apps that selectively compile Google Play service APIs need only this dependency.
     //compile 'com.google.android.gms:play-services-wallet:11.4.2'
 }
+//apply plugin: 'com.google.gms.google-services'
